--- a/FoxRoles/FoxRoles/Views/Home/Index.cshtml
+++ b/FoxRoles/FoxRoles/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 <div class="row">
     <div class="col-md-4">
         <h2>Damian's Health Club</h2>
+        <h2>test for github</h2>
 
     </div>
 </div>
